--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
 body{
 	font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 	font-size: 14px;
-	background: #FFD700;
+	background: #FFFAF0;
 }
 
 header{
